Wed Sep 23 13:05:11 CDT 1998  mej <mej@mw.3com.com>

	* clients.c, configure.in - Fixes needed to find FIONBIO macro,
	  at least on Solaris
	
1998-09-23  Kimball Thurston <kimball@sgrail.com>

	* clients.c - Make sure that the socket when connected is marked
	  as non-blocking

	* audio_irix.c - Fix to reset the output rate every time a sample
	  is played, so other utilities that play sounds and rudely
	  change the output rate on SGI systems can't mess with esd too
	  much

1998-09-22  Yo Ric Dude  <ericmit@ix.netcom.com>

	* AUTHORS, TODO: updates/formatting

	* acconfig.h, audio.c, audio_alsa.c, configure.in: "New" ALSA
 	driver detection courtesy of Bibek Sahu.

1998-09-20  Yo Ric Dude  <ericmit@ix.netcom.com>

	* configure.in: made esdplay a --enable-able option, that was fun.
	let's bump up the revision level here, too, while we're at it.

	* esd.c, mix.c, samples.c: i think i've got the 8bit stuff working,
	but it needs to be cleaned up, and preferably use function pointers 
	over if-else blocks to pick the appropriate 8bit/16bit algorithms.

1998-09-19  Yo Ric Dude  <ericmit@ix.netcom.com>

	* AUTHORS: decided to add my own name to the file, so people can
 	blame me a little more directly
	* Makefile.am: added optional building of esdplay.  
	* configure.in: added optional building of esdplay based on
 	whether or not -laudiofile is found.  made several "artistic"
 	changes to configure.in.  also added feedback about the expected
 	failure of the various audio header and lib tests.  hopefully
 	people won't think their system is horribly broken if not all of
 	the tests pass.
	* esdplay.c: added Simon Kagedal's auto format sniffing player for
 	esd, requires the audiofile library, which is in gnome cvs)

	* audio.c, esd.c, esd.h, esdcat.c, esdloop.c, esdmon.c, esdrec.c,
	esdsample.c, mix.c, players.c: allow different server rates, too.

	* esd-server.h, esd.c, mix.c, players.c: started the 8 bit server 