@@ -133,20 +133,21 @@ int get_new_clients( int listen )
 		return -1;
 	    }
 
+	    /* It appears that not all systems construct the new socket in
+	     * a blocking mode, if the listening socket is non-blocking, so
+	     * let's set that here...
+	     */
+	    nbl = 0;
+	    if ( ioctl( fd, FIONBIO, &nbl ) < 0 )
+	    {
+		if ( esdbg_trace ) 
+		    printf( "(%02d) couldn't turn on blocking for client\n", fd );
+		close( fd );
+		return -1;
+	    }
+
 	    /* fill in the new_client structure - sockaddr = works!? */
 	    /* request = ..._INVALID forces polling client next time */
-
-		/* It appears that not all systems construct the new socket in
-		 * a blocking mode, if the listening socket is non-blocking, so
-		 * let's set that here...
-		 */
-		nbl = 0;
-		if ( ioctl( fd, FIONBIO, &nbl ) < 0 )
-		{
-			fprintf( stderr, "Couldn't turn on blocking for client\n" );
-			close( fd );
-			return -1;
-		}
 	    new_client->next = NULL;
 	    new_client->state = ESD_NEEDS_VALIDATION;
 	    new_client->request = ESD_PROTO_INVALID;
