@@ -20,6 +20,7 @@ dnl Check for network libs needed
 AC_CHECK_FUNC(connect,,[AC_CHECK_LIB(socket,connect)])
 AC_CHECK_FUNC(gethostbyname,,[AC_CHECK_LIB(nsl,gethostbyname)])
 AC_CHECK_FUNC(inet_aton,,[AC_CHECK_LIB(resolv,inet_aton)])
+AC_CHECK_FUNC(nanosleep,,[AC_CHECK_LIB(posix4,nanosleep)])
 
 dnl Needed for FIONBIO on Solaris at least
 AC_CHECK_HEADERS(sys/filio.h sys/ioctl.h)
